# fast-api-default-2025

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
app/: main.py
