[project]
name = "fast-api-default-2025"
version = "0.1.0"
description = "Projeto default para FastAPI em 2025"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.10",
]

[tool.ruff]
line-length = 170
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
target-version = "py313"

pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_unused_configs = true

disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_incomplete_defs = false
check_untyped_defs = false